fix callback export

--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94b6e6b7",
+   "id": "bbbe8bc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f007ad59",
+   "id": "620fed99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad1f2fe",
+   "id": "e71a2bda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d70c1201",
+   "id": "1dd1dd0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "725c6ca5",
+   "id": "b4262673",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25fe554c",
+   "id": "e867bed8",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d98ec6c8",
+   "id": "b07a289c",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33454f60",
+   "id": "e0b75ea0",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e85ce7",
+   "id": "d57632ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78b6b8b2",
+   "id": "dc30eb7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cb6672",
+   "id": "4a3b7c81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9d0dde",
+   "id": "aff28d4b",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a77f718b",
+   "id": "a3e0c9c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bd4a59f",
+   "id": "5c2d1ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "057ee7a4",
+   "id": "b65ec387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,10 +188,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5370b117",
+   "id": "acac44f9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class TransCallback(Callback):\n",
     "    \"Handles HuggingFace model inputs and outputs\"\n",
     "    def __init__(self, model):\n",
@@ -220,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6028d18",
+   "id": "b4bcb455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efa1c5a6",
+   "id": "df2a38f9",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -246,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7a3bf36",
+   "id": "b396dd73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09242d50",
+   "id": "5b8873b2",
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b83c5a",
+   "id": "544f3ee8",
    "metadata": {},
    "source": [
     "## Fin"
@@ -340,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d7091ee",
+   "id": "0dc6fefb",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "428ec687",
+   "id": "29a9fda4",
    "metadata": {},
    "outputs": [],
    "source": []
