to_device for BatchEncoding

--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -466,7 +466,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>the shop around the corner is one of the sweetest and most feel - good romantic comedies ever made. there's just no getting around that, and it's hard to actually put one's feeling for this film into words. it's not one of those films that tries too hard, nor does it come up with the oddest possible scenarios to get the two protagonists together in the end. in fact, all its charm is innate, contained within the characters and the setting and the plot... which is highly believable to boot. it's easy to think that such a love story, as beautiful as any other ever told, * could * happen to you... a feeling you don't often get from other romantic comedies, however sweet and heart - warming they may be. &lt; br / &gt; &lt; br / &gt; alfred kralik ( james stewart ) and clara novak ( margaret</td>\n",
+       "      <td>many neglect that this isn't just a classic due to the fact that it's the first 3d game, or even the first shoot -'em - up. it's also one of the first stealth games, one of the only ( and definitely the first ) truly claustrophobic games, and just a pretty well - rounded gaming experience in general. with graphics that are terribly dated today, the game thrusts you into the role of b. j. ( don't even * think * i'm going to attempt spelling his last name! ), an american p. o. w. caught in an underground bunker. you fight and search your way through tunnels in order to achieve different objectives for the six episodes ( but, let's face it, most of them are just an excuse to hand you a weapon, surround you with nazis and send you out to waste one of the nazi leaders</td>\n",
        "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -476,8 +476,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>well, what can i say. &lt; br / &gt; &lt; br / &gt; \" what the bleep do we know \" has achieved the nearly impossible - leaving behind such masterpieces of the genre as \" the postman \", \" the dungeon master \", \" merlin \", and so fourth, it will go down in history as the single worst movie i have ever seen in its entirety. and that, ladies and gentlemen, is impressive indeed, for i have seen many a bad movie. &lt; br / &gt; &lt; br / &gt; this masterpiece of modern cinema consists of two interwoven parts, alternating between a silly and contrived plot about an extremely annoying photographer, abandoned by her husband and forced to take anti - depressants to survive, and a bunch of talking heads going on about how quantum physics supposedly justifies their new - agy pseudo - philosophy. basically, if</td>\n",
-       "      <td>negative</td>\n",
+       "      <td>this film sat on my tivo for weeks before i watched it. i dreaded a self - indulgent yuppie flick about relationships gone bad. i was wrong ; this was an engrossing excursion into the screwed - up libidos of new yorkers. &lt; br / &gt; &lt; br / &gt; the format is the same as max ophuls'\" la ronde, \" based on a play by arthur schnitzler, who is given an \" inspired by \" credit. it starts from one person, a prostitute, standing on a street corner in brooklyn. she is picked up by a home contractor, who has sex with her on the hood of a car, but can't come. he refuses to pay her. when he's off peeing, she answers his cell phone and takes a message. she runs away with his keys. &lt; br / &gt; &lt; br / &gt; then the story switches to</td>\n",
+       "      <td>positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -504,13 +504,13 @@
     {
      "data": {
       "text/plain": [
-       "({'input_ids': tensor([[ 101, 6274, 5125,  ..., 1998, 2130,  102],\n",
-       "          [ 101, 1996, 4497,  ..., 2090, 1005,  102],\n",
-       "          [ 101, 2085, 2008,  ..., 2839, 1025,  102],\n",
+       "({'input_ids': tensor([[  101,  6274,  5125,  ...,  1998,  2130,   102],\n",
+       "          [  101,  1996,  4497,  ...,  2090,  1005,   102],\n",
+       "          [  101,  2116, 19046,  ...,  1010,  2004,   102],\n",
        "          ...,\n",
-       "          [ 101, 2024, 2017,  ..., 2015, 2000,  102],\n",
-       "          [ 101, 1045, 3427,  ..., 2091, 1012,  102],\n",
-       "          [ 101, 1045, 2018,  ..., 1007, 1012,  102]], device='cuda:0'),\n",
+       "          [  101,  1000,  1996,  ...,  3683,  1010,   102],\n",
+       "          [  101,  2023,  2003,  ...,  2137,  1999,   102],\n",
+       "          [  101,  1045,  2123,  ...,  3773,  2023,   102]], device='cuda:0'),\n",
        "  'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
@@ -518,7 +518,7 @@
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1]], device='cuda:0')},\n",
-       " TensorCategory([0, 1, 0, 1, 1, 0, 0, 0], device='cuda:0'))"
+       " TensorCategory([0, 1, 1, 0, 0, 1, 1, 0], device='cuda:0'))"
       ]
      },
      "execution_count": null,
@@ -569,8 +569,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>now that che ( 2008 ) has finished its relatively short australian cinema run ( extremely limited release : 1 screen in sydney, after 6wks ), i can guiltlessly join both hosts of \" at the movies \" in taking steven soderbergh to task. &lt; br / &gt; &lt; br / &gt; it's usually satisfying to watch a film director change his style / subject, but soderbergh's most recent stinker, the girlfriend experience ( 2009 ), was also missing a story, so narrative ( and editing? ) seem to suddenly be soderbergh's main challenge. strange, after 20 - odd years in the business. he was probably never much good at narrative, just hid it well inside \" edgy \" projects. &lt; br / &gt; &lt; br / &gt; none of this excuses him this present, almost diabolical failure. as david stratton warns, \" two parts of che don't ( even</td>\n",
-       "      <td>negative</td>\n",
+       "      <td>many neglect that this isn't just a classic due to the fact that it's the first 3d game, or even the first shoot -'em - up. it's also one of the first stealth games, one of the only ( and definitely the first ) truly claustrophobic games, and just a pretty well - rounded gaming experience in general. with graphics that are terribly dated today, the game thrusts you into the role of b. j. ( don't even * think * i'm going to attempt spelling his last name! ), an american p. o. w. caught in an underground bunker. you fight and search your way through tunnels in order to achieve different objectives for the six episodes ( but, let's face it, most of them are just an excuse to hand you a weapon, surround you with nazis and send you out to waste one of the nazi leaders</td>\n",
+       "      <td>positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -606,13 +606,13 @@
     {
      "data": {
       "text/plain": [
-       "({'input_ids': tensor([[  101,  6274,  5125,  ...,  1998,  2130,   102],\n",
-       "          [  101,  1996,  4497,  ...,  2090,  1005,   102],\n",
-       "          [  101,  2085,  2008,  ...,  2839,  1025,   102],\n",
+       "({'input_ids': tensor([[ 101, 6274, 5125,  ..., 1998, 2130,  102],\n",
+       "          [ 101, 2085, 2008,  ..., 2839, 1025,  102],\n",
+       "          [ 101, 2023, 2143,  ..., 1037, 2265,  102],\n",
        "          ...,\n",
-       "          [  101,  1996,  2095,  ..., 13433, 21565,   102],\n",
-       "          [  101,  1045,  3427,  ...,  2091,  1012,   102],\n",
-       "          [  101,  2348,  3858,  ...,  1997,  1996,   102]], device='cuda:0'),\n",
+       "          [ 101, 2024, 2017,  ..., 2015, 2000,  102],\n",
+       "          [ 101, 1000, 2298,  ..., 2486, 6980,  102],\n",
+       "          [ 101, 1045, 2018,  ..., 1007, 1012,  102]], device='cuda:0'),\n",
        "  'attention_mask': tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
@@ -620,7 +620,7 @@
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1],\n",
        "          [1, 1, 1,  ..., 1, 1, 1]], device='cuda:0'),\n",
-       "  'labels': TensorCategory([0, 1, 0, 1, 0, 1, 0, 1], device='cuda:0')},)"
+       "  'labels': TensorCategory([0, 0, 1, 0, 0, 0, 0, 0], device='cuda:0')},)"
       ]
      },
      "execution_count": null,
@@ -721,49 +721,9 @@
      "output_type": "stream",
      "text": [
       "Using custom data configuration default-baca2dc48733f0f6\n",
-      "Reusing dataset csv (/root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4177377c67d341278a7f8c2dea6417e8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1000.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ff76ae590e84fe7826a1094c2b220c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=1.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Reusing dataset csv (/root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0)\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0/cache-032c7a403e6a8cc8.arrow\n",
+      "Loading cached processed dataset at /root/.cache/huggingface/datasets/csv/default-baca2dc48733f0f6/0.0.0/cache-bd4c0fdd3d96b02e.arrow\n"
      ]
     }
    ],
@@ -822,19 +782,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[MASK] hour and [MASK] half to kill and [MASK] soviets you [MASK] to end [MASK] feeling frustrated and confused 1716 rent this winner. [SEP] [CLS] \" gunga [MASK] [MASK] : one of the greatest adventure domingofra told! a story about [MASK] british foreign legion in 19th century india and a [MASK]ly \" [MASK] - bearer \" named gunga din, a local denize [MASK] who aspire [MASK] to be [MASK] like his tristan [MASK] ; three british [MASK] [MASK] whose loyalty and cam [MASK]derie for each other extend far beyond [MASK] boundsdie mere patriotism. their's is a true and abiding friendship [MASK] one another and each would be willing [MASK] sacrifice</td>\n",
+       "      <td>actually kinda funny. after awhile the pool shot feels like a [MASK] channel [MASK] s station identification logo, reminding us that we are watching \" grey matter \". &lt; br / &gt; &lt; br / &gt; i also enjoyed [MASK] boutshore name - calling. at one [MASK] an angry test subject taunts somebody in charge by [MASK] her a \" scientific b * tch! \". it'ambrose just a [MASK] inadequate [MASK]. several scenes later a different subject lets off steam by muttering about that \" scientific b * * tard! \". it just sounded very awkward to me. &lt; br / &gt; &lt; br / &gt; someday this movie [MASK] disappear forever</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>meeting again an old friend, whom i had not seen for almost 15 years, which he spent in several panamanian jails. the young man i used to know is gone, not only because he insides older [MASK] but due to his exposure for a [MASK] time to the penal system. there are jails and there are jails, one must [MASK], but this one prisoner in \" shot in the heart \" is definitely out of this world. [SEP] [CLS] i [MASK] this movie. [MASK] [MASK] because i am a big fan of moritz bleibtreu, although he is in practically [MASK] german movies [MASK] count. but also because he fat</td>\n",
+       "      <td>: the [MASK] men [MASK] all hotter than the [MASK] guys. &lt; br [MASK] &gt; &lt; br / [MASK] don [MASK] t get me wrong, im not saying all the gay guys were ugly and [MASK], [MASK] [MASK] [MASK] of fact i found some of them [MASK] cute. it's just that overall they were just blah compared to the men you [MASK] purse see on shows like avocation at love with [MASK]a tequila or [MASK] bachelor [MASK]. &lt; br / [MASK] [MASK] br / &gt; i don't know how many times i hit fast [MASK] during this show. i can accept a lead character as interesting as a cardboard [MASK], i can accept the mundane</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>and replaced with songs. i've read this [MASK] [MASK] and recently was lucky enough to see it [MASK], at it remains one of [MASK] favourite shakespearian comedies, but this russian seems to take all that i [MASK] about it away [MASK] the princess, [MASK] no doubt doing what [MASK] was directed to do, had no regal bearing, [MASK] all the girls seemed to lose the clever [MASK] of their characters - gonzalez affected by unwise cuts, which not only took away the female characters already sparse [MASK], but took comments out of context - it [MASK] a little unnerving to hear the princess proclaim ; \" we are wise girls to mock</td>\n",
+       "      <td>i 1789 ever experienced. [MASK] possible line in the movie [MASK] unoriginal [MASK] cliche, or just [MASK] stupid. for [MASK] the name of the camp is \" camp blood \" ( lame ), the name of the clown is \" the [MASK] clown \" ( lame ). what is a clown doing in a forest anyway? was that [MASK] only mask they could find? 3. the last but certainly the least was the acting [MASK] [MASK] the worst [MASK] of actors and actresses ever assembled. a [MASK] cornucopia of shitty lines and poor acting. worst part by far was when [MASK] [MASK] flash back to this fat foreign girl getting naked for</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>for [MASK] the year that he ocean. i'm guessing that he stayed because he was supposed to see how good [MASK] life was [MASK] to the poverty [MASK] [MASK] frightening parador. i think he took too many things for granted in life and he needed to get a serious reality check by remaining in [MASK] country for as long as he did. &lt; br / &gt; &lt; br / [MASK] but......... [unused9]. anyways. [MASK]... [MASK].. [MASK].. [MASK] is why i [MASK] this lit recital [MASK] out of 10. [SEP] [CLS] i don't quite get the rating for the amati</td>\n",
+       "      <td>s daughter )! as in the later film, too, fanfan ( [MASK] ideally cast gerard philipe [MASK], ironically, is so full of life here that one [MASK] it [MASK] [MASK] believe that he would be stricken down by cancer within 7 years'time ) [MASK] flanked by two fun - [MASK] yet [MASK]ly men ( one of them is actually his superior [MASK] and [MASK] heroine's own father ) and opposed [MASK] an unscrupulous figure within [MASK] own ranks ( the [MASK] [MASK] ro [MASK]vert, with whom the hero [MASK] engages in a rooftop duel since [MASK] too has amorous designs [MASK] the gypsy girl )! ; for the record</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -867,19 +827,19 @@
        "         ...,\n",
        "         [1, 1, 1,  ..., 1, 1, 1],\n",
        "         [1, 1, 1,  ..., 1, 1, 1],\n",
-       "         [1, 1, 1,  ..., 1, 1, 1]]), 'input_ids': tensor([[ 1010,  2743,  3215,  ...,  4569,   103,  1996],\n",
-       "         [10933,  2018,  2517,  ...,  1012,  1999,  2804],\n",
-       "         [ 8502,  2599,  5889,  ...,  2055,  2023,   103],\n",
+       "         [1, 1, 1,  ..., 1, 1, 1]]), 'input_ids': tensor([[ 2015,  2021,  2002,  ...,  2028, 16278,  2129],\n",
+       "         [ 2685,  2024,  1037,  ...,  1037,  4393,  1010],\n",
+       "         [ 2020,  2525,  5936,  ...,  3036,  6481,  1997],\n",
        "         ...,\n",
-       "         [ 2862,  2073,  2045,  ...,   103,  2000,  9191],\n",
-       "         [  103,  1010,  2069,  ...,  1997,  4438,   103],\n",
-       "         [ 2821,  2092,  1012,  ...,  2051,  2027,   103]]), 'labels': tensor([[-100, -100, -100,  ..., -100, 1010, -100],\n",
-       "         [-100, -100, -100,  ..., -100, -100, -100],\n",
-       "         [-100, -100, -100,  ..., -100, -100, 2061],\n",
+       "         [ 4516,  8223, 23242,  ..., 17529, 10652,  5092],\n",
+       "         [ 2065,  2023,   103,  ...,   103,  2478,  7658],\n",
+       "         [ 2369,  1996,  2616,  ...,  2166,  1010,  1998]]), 'labels': tensor([[ -100,  -100,  -100,  ...,  -100,  -100,  -100],\n",
+       "         [ -100,  -100,  -100,  ...,  -100,  -100,  -100],\n",
+       "         [ -100,  -100,  -100,  ...,  -100,  -100,  -100],\n",
        "         ...,\n",
-       "         [-100, -100, -100,  ..., 2038, -100, -100],\n",
-       "         [4808, -100, -100,  ..., -100, -100, 2143],\n",
-       "         [-100, -100, -100,  ..., -100, -100, 3863]])},)"
+       "         [ -100,  -100,  -100,  ...,  -100, 12954,  -100],\n",
+       "         [ -100,  -100,  2276,  ...,  2003,  -100,  -100],\n",
+       "         [ -100,  -100,  -100,  ...,  -100,  -100,  -100]])},)"
       ]
      },
      "execution_count": null,
