--- a/nbs/01_learner.ipynb
+++ b/nbs/01_learner.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbbe8bc4",
+   "id": "44f51fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "620fed99",
+   "id": "e3a82a72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e71a2bda",
+   "id": "f68db055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dd1dd0c",
+   "id": "c97e9bde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4262673",
+   "id": "0eadcd83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e867bed8",
+   "id": "e1e13386",
    "metadata": {},
    "source": [
     "# Learner for transformers"
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b07a289c",
+   "id": "4cc2379b",
    "metadata": {},
    "source": [
     "## Parameter groups"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0b75ea0",
+   "id": "e11cad57",
    "metadata": {},
    "source": [
     "TODOs:\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d57632ee",
+   "id": "97d932ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc30eb7b",
+   "id": "d0809758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3b7c81",
+   "id": "71ac5721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff28d4b",
+   "id": "49115996",
    "metadata": {},
    "source": [
     "## TransLearner and utils"
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3e0c9c7",
+   "id": "ade0a884",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c2d1ecc",
+   "id": "3a32d873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +164,8 @@
     "    elif device is None: device=default_device()\n",
     "    def _inner(o):      \n",
     "        if isinstance(o,Tensor): return o.to(device, non_blocking=True)\n",
-    "        elif isinstance(o, (dict, BatchEncoding)):\n",
-    "            return {k:to_device(v) for k,v in o.items()}\n",
-    "        elif hasattr(o, \"to_device\"): return o.to_device(device)\n",
+    "        elif isinstance(o,BatchEncoding): return o.to(device)\n",
+    "        # elif hasattr(o, \"to_device\"): return o.to_device(device)\n",
     "        else: return o\n",
     "    return apply(_inner, b)"
    ]
@@ -174,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65ec387",
+   "id": "a9bc7eb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acac44f9",
+   "id": "8d5a3675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4bcb455",
+   "id": "7ea52e12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,8 +236,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf5d2227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "@patch\n",
+    "def _set_device(self:TransLearner, b):\n",
+    "    model_device = torch.device(torch.cuda.current_device()) if next(self.model.parameters()).is_cuda else torch.device('cpu')\n",
+    "    dls_device = getattr(self.dls, 'device', default_device())\n",
+    "    if model_device == dls_device: return to_device(b, dls_device)\n",
+    "    else: return to_device(b, model_device)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "df2a38f9",
+   "id": "8c71346d",
    "metadata": {},
    "source": [
     "### Using TransLearner for sequence classification"
@@ -247,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b396dd73",
+   "id": "dc314670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,17 +285,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b8873b2",
+   "id": "c112a420",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_layer_norm.weight', 'vocab_projector.weight', 'vocab_transform.weight', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_layer_norm.bias']\n",
+      "Some weights of the model checkpoint at distilbert-base-uncased were not used when initializing DistilBertForSequenceClassification: ['vocab_layer_norm.weight', 'vocab_layer_norm.bias', 'vocab_transform.bias', 'vocab_projector.bias', 'vocab_projector.weight', 'vocab_transform.weight']\n",
       "- This IS expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing DistilBertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight', 'classifier.bias']\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.weight', 'pre_classifier.bias', 'classifier.bias', 'pre_classifier.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -300,16 +315,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>0.587621</td>\n",
-       "      <td>0.441315</td>\n",
-       "      <td>0.800000</td>\n",
+       "      <td>0.525150</td>\n",
+       "      <td>0.571722</td>\n",
+       "      <td>0.730000</td>\n",
        "      <td>00:22</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.365849</td>\n",
-       "      <td>0.449296</td>\n",
-       "      <td>0.810000</td>\n",
+       "      <td>0.311822</td>\n",
+       "      <td>0.347995</td>\n",
+       "      <td>0.880000</td>\n",
        "      <td>00:22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -332,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "544f3ee8",
+   "id": "43d2366f",
    "metadata": {},
    "source": [
     "## Fin"
@@ -341,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc6fefb",
+   "id": "6f7048f3",
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a9fda4",
+   "id": "c989b220",
    "metadata": {},
    "outputs": [],
    "source": []
