--- a/nbs/10_examples.classification-imdb.ipynb
+++ b/nbs/10_examples.classification-imdb.ipynb
@@ -329,7 +329,7 @@
    ],
    "source": [
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
-    "learn = TransLearner(dls, model, metrics=accuracy)"
+    "learn = TransLearner(dls, model, metrics=accuracy).to_fp16()"
    ]
   },
   {
