--- a/nbs/12_examples.glue-benchmark.ipynb
+++ b/nbs/12_examples.glue-benchmark.ipynb
@@ -451,7 +451,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -981,7 +981,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -1427,7 +1427,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -1878,7 +1878,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=1)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -2329,7 +2329,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -2804,7 +2804,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -3281,7 +3281,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -3727,7 +3727,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
@@ -4173,7 +4173,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
