--- a/nbs/12a_examples.glue-benchmark-sweeps.ipynb
+++ b/nbs/12a_examples.glue-benchmark-sweeps.ipynb
@@ -456,7 +456,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=glue_num_labels.get(task, 2))\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics, opt_func=opt_func, splitter=layerwise_splitter)"
+    "learn = TransLearner(dls, model, metrics=metrics, opt_func=opt_func, splitter=layerwise_splitter).to_fp16()"
    ]
   },
   {
@@ -719,7 +719,7 @@
     "        metrics = glue_metrics[task]\n",
     "        k = len(layerwise_splitter(model))\n",
     "        if cfg.diff_lr_decay_factor: lr = slice(cfg.lr*cfg.diff_lr_decay_factor**k,cfg.lr)\n",
-    "        learn = TransLearner(dls, model, metrics=metrics, opt_func=Adam, splitter=layerwise_splitter)\n",
+    "        learn = TransLearner(dls, model, metrics=metrics, opt_func=Adam, splitter=layerwise_splitter).to_fp16()\n",
     "        learn.fit_one_cycle(n_epoch, cfg.lr, wd=cfg.wd, cbs=[WandbCallback(log_preds=False, log_model=False)])\n",
     "        del learn\n",
     "        gc.collect()\n",
@@ -1047,7 +1047,7 @@
     "#hide_output\n",
     "model = AutoModelForSequenceClassification.from_pretrained(model_name, num_labels=3)\n",
     "metrics = glue_metrics[task]\n",
-    "learn = TransLearner(dls, model, metrics=metrics)"
+    "learn = TransLearner(dls, model, metrics=metrics).to_fp16()"
    ]
   },
   {
