upd target processing

--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -229,17 +229,16 @@
     "                                  max_length=self.max_length,\n",
     "                                  return_tensors='pt', \n",
     "                                  **self.kwargs).input_ids\n",
-    "            inps['labels'] = targets\n",
-    "            res = (inps, )\n",
+    "            targets = (targets, )\n",
     "        else:\n",
     "            # inps are batched, collate targets into batches too\n",
-    "            labels = default_collate([s[1:] for s in batch])\n",
-    "            if self.with_labels:\n",
-    "                # TODO consider cases when there are multiple labels\n",
-    "                inps['labels'] = labels[0]\n",
-    "                res = (inps, )\n",
-    "            else:\n",
-    "                res = (inps, ) + tuple(labels)\n",
+    "            targets = default_collate([s[1:] for s in batch])\n",
+    "        if self.with_labels:\n",
+    "            # TODO consider cases when there are multiple labels\n",
+    "            inps['labels'] = targets[0]\n",
+    "            res = (inps, )\n",
+    "        else:\n",
+    "            res = (inps, ) + tuple(labels)\n",
     "        return res\n",
     "    \n",
     "    def decodes(self, x:TensorText):\n",
