--- a/nbs/00_data.ipynb
+++ b/nbs/00_data.ipynb
@@ -238,7 +238,7 @@
     "            inps['labels'] = targets[0]\n",
     "            res = (inps, )\n",
     "        else:\n",
-    "            res = (inps, ) + tuple(labels)\n",
+    "            res = (inps, ) + tuple(targets)\n",
     "        return res\n",
     "    \n",
     "    def decodes(self, x:TensorText):\n",
